# django-filingcabinet

./: .dockerignore  .eslintignore  .eslintrc.json  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  Makefile  Pipfile  README.md  default.nix  docker-compose.yml  eslint.config.mjs  jsconfig.json  manage.py  package.json  pnpm-lock.yaml  pyproject.toml  pytest.ini  requirements-production.in  requirements-production.txt  runtests.sh  setup.cfg  setup.py  vite.config.js
.github/: ci.yml
.github/workflows/: ci.yml
fc_project/: admin.py  settings.py  urls.py  wsgi.py
fc_project/nginx/: default.conf
fc_project/templates/: _frontend.html  base.html
filingcabinet/: __init__.py  admin.py  admin_utils.py  api_renderers.py  api_serializers.py  api_utils.py  api_views.py  apps.py  auth.py  filters.py  forms.py  models.py  pdf_utils.py  schema.py  services.py  settings.py  signals.py  storage.py  tasks.py  urls.py  utils.py  views.py
filingcabinet/management/commands/: import_documents.py
filingcabinet/migrations/: 0001_initial.py  0002_documentcollection.py  0003_auto_20180810_1559.py  0004_auto_20180810_1642.py  0005_auto_20181217_1456.py  0006_auto_20190109_1339.py  0007_pageannotation_highlight.py  0008_auto_20190806_1535.py  0009_document_file_size.py  0010_auto_20190815_1047.py  0011_auto_20190815_1126.py  0012_page_corrected.py  0013_auto_20191001_1644.py  0014_auto_20191007_1827.py  0015_auto_20191030_1840.py  0016_auto_20200108_1228.py  0017_auto_20200514_1329.py  0018_auto_20200622_1302.py  0019_auto_20210323_1404.py  0020_auto_20210505_1720.py  0021_auto_20210511_1546.py  0022_auto_20210603_1617.py  0023_auto_20220707_1205.py  0024_alter_collectiondirectory_id_and_more.py  0025_collectiondirectory_depth_and_more.py  0026_auto_20220920_1828.py  0027_remove_collectiondirectory_level_and_more.py  0028_alter_collectiondirectory_depth_and_more.py
filingcabinet/templates/: base.html
filingcabinet/templates/filingcabinet/: _document_viewer.html  _documentcollection_viewer.html  document_detail.html  document_detail_embed.html  document_list.html  documentcollection_detail.html  documentcollection_detail_embed.html  documentportal_detail.html
filingcabinet/templatetags/: filingcabinet.py
frontend/javascript/: entry.js  fcdownloader.js  filingcabinet.js
frontend/javascript/components/: copy-button.vue  document-annotation-sidebar.vue  document-annotation.vue  document-annotations.vue  document-collection-searchbar.vue  document-collection-searchresults.vue  document-collection.vue  document-daterangefilter.vue  document-facet.vue  document-filter.vue  document-modal.vue  document-outline-sidebar.vue  document-page-annotationoverlay.vue  document-page.vue  document-pages.vue  document-preview-grid.vue  document-preview-page.vue  document-preview-sidebar.vue  document.vue  (+7 more)
src/fc_project/: admin.py  base_admin.py  base_urls.py  celery.py  settings.py  urls.py
src/filingcabinet/: __init__.py  admin.py  admin_utils.py  api.py  api_serializers.py  api_utils.py  api_views.py  apps.py  filters.py  forms.py  models.py  pdf_utils.py  schema.py  services.py  settings.py  tasks.py  urls.py  utils.py  validators.py  views.py
test_project/: manage.py  settings.py  urls.py
test_project/app/: models.py
test_project/test_project/: settings.py  urls.py
tests/: __init__.py  conftest.py  factories.py  test_collection_api.py  test_collection_views.py  test_command.py  test_document_api_filters.py  test_document_views.py  test_documentcollection_pagination.py  test_misc.py  test_misc_api.py  test_page_api_filters.py  test_portal_views.py  test_rss_api.py  test_services.py  test_unlisted.py  test_viewer.py
(+47 files in other folders)
