[project]
name = "django-filingcabinet"
version = "0.0.1"
dependencies = [
  "Django",
  "wand",
  "pypdf",
  "PyCryptodome",
  "pikepdf",
  "Pillow",
  "django-filter",
  "django-json-widget",
  "jsonschema",
  "django-taggit>=2",
  "django-treebeard",
  "djangorestframework",
  "reportlab",
  "celery",
  "feedgen",
  "zipstream",
  "python-poppler",
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.optional-dependencies]
tabledetection = ["camelot-py[cv]"]
ocr = ["pytesseract"]
webp = ["webp"]
annotate = [
  "fcdocs-annotate @ https://github.com/okfde/fcdocs-annotate/archive/refs/heads/main.zip",
]
test = [
  "coverage[toml]",
  "django-coverage-plugin",
  "django-stubs",
  "djangorestframework-stubs",
  "factory_boy",
  "monkeytype",
  "mypy-extensions",
  "mypy",
  "pycodestyle",
  "pytest-django",
  "pytest-factoryboy",
  "pytest-playwright",
  "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
DJANGO_SETTINGS_MODULE = "test_project.settings"
python_files = "tests.py test_*.py"
markers = "slow: marks tests as slow"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
exclude = ["migrations", "build", "node_modules"]

[tool.ruff.lint]
ignore = ["E501", "C901"]
select = ["C", "E", "F", "W", "B", "I001"]

[tool.ruff.lint.pycodestyle]
max-line-length = 88

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
section-order = [
  "future",
  "standard-library",
  "django",
  "third-party",
  "first-party",
  "local-folder",
]
default-section = "third-party"
known-first-party = ["filingcabinet"]

[tool.ruff.lint.isort.sections]
django = ["django"]

[tool.djlint]
ignore = "T002,T003,H005,H006,H021,H023,H029,H030,H031"

[tool.coverage.run]
branch = true
source = ["src/filingcabinet"]
omit = ["*/migrations/*", "*/wsgi.py"]
plugins = ["django_coverage_plugin"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = ["pragma: no cover"]
